<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Task2">
    <de.hdodenhof.circleimageview.CircleImageView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_image"
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:src="@drawable/baseline_circle_24"
    app:civ_border_width="2dp"
    app:civ_border_color="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
 android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        android:text="@string/profile_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/profilename"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/dots"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginEnd="10dp"
        />
    <TextView
       android:id="@+id/hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profilename"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        android:text="@string/post_tim"
        android:textColor="@color/whitblak"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/hrs"
        app:layout_constraintTop_toTopOf="@id/hrs"
        app:layout_constraintBottom_toBottomOf="@id/hrs"
        android:src="@drawable/baseline_public_24"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        />
    <TextView
        android:id="@+id/posttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_txt"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        android:textSize="16dp"
        android:layout_marginStart="4dp"
        android:paddingStart="5dp"
        />
    <TextView
        android:id="@+id/textlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/posttext"
        app:layout_constraintStart_toStartOf="@id/posttext"
        app:layout_constraintEnd_toEndOf="@id/posttext"
        android:text="@string/post_lnk"
android:paddingStart="5dp"
        android:layout_marginTop="4dp"
android:textSize="14dp"
        android:textColor="@color/link"
        />
    <ImageView
        android:id="@+id/post"
        android:layout_width="0dp"
        android:layout_height="0dp"
app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/textlink"
app:layout_constraintHeight_percent="0.62"
      android:background="@color/yellow"
        android:layout_marginTop="20dp"


        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/facebooklike"
        app:layout_constraintTop_toBottomOf="@id/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnlike"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.04"
    android:layout_marginTop="15dp"
        android:layout_marginStart="6dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        android:text="@string/likes"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/like"
        android:textColor="@color/whitblak"
        />
 <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/shareimage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="@id/like"
     app:layout_constraintBottom_toBottomOf="@id/like"
     android:src="@drawable/baseline_circle_24"
     android:layout_marginEnd="25dp"
     />
    
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/baseline_arrow_drop_down_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/shareimage"
    app:layout_constraintBottom_toBottomOf="@id/shareimage"
app:layout_constraintStart_toEndOf="@id/shareimage"
android:layout_marginEnd="16dp"
    android:layout_marginStart="5dp"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_share"
        app:layout_constraintTop_toTopOf="@id/shareimage"
        app:layout_constraintBottom_toBottomOf="@id/shareimage"
        app:layout_constraintEnd_toStartOf="@id/shareimage"
        android:layout_marginEnd="10dp"
        android:textColor="@color/whitblak"
        />
<com.google.android.material.button.MaterialButton
   android:id="@+id/btnlike"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintWidth_percent="0.333333"
    app:layout_constraintHeight_percent="0.07"
    app:layout_constraintBottom_toBottomOf="parent"
    app:cornerRadius="0dp"
    android:backgroundTint="@color/white"
    android:text="@string/like_btn"
    android:textColor="@color/whitblak"
    />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/btnlike"
        app:layout_constraintTop_toTopOf="@id/btnlike"
        app:layout_constraintBottom_toBottomOf="@id/btnlike"
        android:src="@drawable/like_icon"
        app:layout_constraintWidth_percent="0.05"
        android:layout_marginStart="30dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btncomment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.333333"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnlike"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/white"
        android:text="Comment"
        android:textColor="@color/whitblak"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/btncomment"
        app:layout_constraintTop_toTopOf="@id/btncomment"
        app:layout_constraintBottom_toBottomOf="@id/btncomment"
        android:src="@drawable/comment_icon"
        app:layout_constraintWidth_percent="0.05"
        android:layout_marginStart="10dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnshare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.333333"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btncomment"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/white"
        android:text="@string/share_btn"
        android:textColor="@color/whitblak"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/btnshare"
        app:layout_constraintTop_toTopOf="@id/btnshare"
        app:layout_constraintBottom_toBottomOf="@id/btnshare"
        android:src="@drawable/share_icon"
        app:layout_constraintWidth_percent="0.05"
        android:layout_marginStart="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>